Fix a crash with --use-skia-renderer

Bug: 819267
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: I14ef4bab4b43a64f959d12bb82ceb82095e5a261
Reviewed-on: https://chromium-review.googlesource.com/951896
Reviewed-by: weiliangc <weiliangc@chromium.org>
Commit-Queue: Peng Huang <penghuang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541204}
Former-commit-id: 4eab9e99447a227a6c3f58f553555571992e80fa